--- a/cn.html
+++ b/cn.html
@@ -219,27 +219,25 @@ import { initializeApp, getApps, deleteApp } from "https://www.gstatic.com/fireb
 import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
 import { getFirestore, collection as myCollection, query ,onSnapshot, doc, getDoc, arrayUnion, arrayRemove, updateDoc, initializeFirestore, persistentLocalCache, persistentMultipleTabManager, clearIndexedDbPersistence, waitForPendingWrites, terminate } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
 const firebaseConfig = { apiKey: "AIzaSyAwh2IXpNUCL2JHuTLKfc8FZDDd62g4j74", authDomain: "nrp888.firebaseapp.com", projectId: "nrp888", storageBucket: "nrp888.firebasestorage.app", messagingSenderId: "876054763342", appId: "1:876054763342:web:fddead6f7db3f8ebcff01f" };
+const app = initializeApp(firebaseConfig);
 
-// Initialize FirebaseApp if none exist.
-let app;
+// Initialize Firestore based on Persistence Choice.
 let dataBaseRef;
-let loggedIn = false; // Global Login-Status variable.
-async function  initiate() {
-if (getApps().length === 0) {
-  app = initializeApp(firebaseConfig);
-  console.log('Not Logged In.');
-} else {
-  app = getApps()[0];  // Use the first initialized firebase instance.
-  const loggedIn = await loginStat();
-  if (loggedIn) {  // 'auth' is working means there is already a firebase instance with an already configured(e.g. localCache) Firestore instance.
-  dataBaseRef = getFirestore(app);
-  activateOnSnapshot();
+async function  initFirestore() {
+const loggedIn = await loginStat();
+if (loggedIn) {
+  if (localStorage.getItem(FirestorePersistence) === "Enabled") {
+    dataBaseRef = initializeFirestore(app, { localCache: persistentLocalCache({ tabManager: persistentMultipleTabManager() }) })
+    console.log('Firestore initialized with persistentLocalCache.');
   } else {
-    console.log('Could not initialize Firestore because User is not loggedIn yet.');
+    dataBaseRef = getFirestore(app);
   }
- }
+} else {
+  showAlert({ BgColor: '#e8af05', Text: '⚠ Not Logged In'});
+  console.log('Could not initialize Firestore because User is not logged in yet.');
+  }
 }
-window.onload = initiate;
+window.onload = initFirestore;
 
 // Login form.
 function showLogin() {
@@ -280,9 +278,11 @@ function login(email, password, offlineSupport) {
       alert(error.message);
     });
   if (offlineSupport) {
+    localStorage.setItem("FirestorePersistence", "Enabled");
     dataBaseRef = initializeFirestore(app, { localCache: persistentLocalCache({ tabManager: persistentMultipleTabManager() }) })
     activateOnSnapshot();
   } else {
+    localStorage.setItem("FirestorePersistence", "Disabled");
     dataBaseRef = getFirestore(app);
     activateOnSnapshot();
     console.log('Firestore initialized with default configuration.');
@@ -303,23 +303,24 @@ function activateOnSnapshot() {
 }
 
 // Check login status.
-function loginStat() {
-  const statBtn = document.getElementById('loginStatus');
-  const auth = getAuth();
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      statBtn.style.backgroundColor = '#0d0';
-      loggedIn = true;
-      return loggedIn;
-    } else {
-      // User is signed out.
-      statBtn.style.backgroundColor = '#d00';
-      loggedIn = false;
-      return loggedIn;
+let loggedIn = false; // Global Login-Status variable.
+async function loginStat() {
+    const statBtn = document.getElementById('loginStatus');
+    const auth = getAuth();
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        loggedIn = true; // For all Fetch functions [getNotes(), saveNote(), deleteNote() etc.]
+        statBtn.style.backgroundColor = '#0d0';
+        return loggedIn; // For initFirestore() function.
+      } else {
+        // User is signed out.
+        loggedIn = false; // For all Fetch functions [getNotes(), saveNote(), deleteNote() etc.]
+        statBtn.style.backgroundColor = '#d00';
+        return loggedIn; // For initFirestore() function.
     }
   });
-}
-loginStat();  // Run at Page Load.
+ }
+//loginStat();  // Run at Page Load.
 
 // Logout and clear IndexedDB and entire Firebase instance.
 function logout() {
