--- a/cn.html
+++ b/cn.html
@@ -234,7 +234,7 @@ if (loggedIn) {
   }
 } else {
   showAlert({ BgColor: '#e8af05', Text: '⚠ Not Logged In'});
-  console.log('Could not initialize Firestore because User is not logged in yet.');
+  console.log("Could not initialize Firestore because User is not logged in yet.");
   }
 }
 window.onload = initFirestore;
